new pc git setup check

--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
 
 <body class="bg-white" onload="firstView('apple')">
     <header>
-        <h1 class="text-4xl text-center my-10 font-bold bg-violet-600 text-white rounded-md py-5">Found your phone</h1>
+        <h1 class="text-4xl text-center my-10 font-bold bg-orange-700 text-white rounded-md py-5">Found your phone</h1>
         <div class=" flex items-center gap-4 justify-center">
             <input onkeyup="foundPhoneByEnter(event, value)" type="text" placeholder="Type your phone name"
                 class="input input-bordered input-primary w-full max-w-xs" />
@@ -24,7 +24,8 @@
     <!-- card section  -->
     <section>
         <!-- spinier -->
-        <div id="loading" class="mx-auto mt-36 w-fit hidden"><button class=" mx-auto btn btn-square loading "></button></div>
+        <div id="loading" class="mx-auto mt-36 w-fit hidden"><button class=" mx-auto btn btn-square loading "></button>
+        </div>
         <!-- modal  -->
 
         <input type="checkbox" id="my-modal-3" class="modal-toggle" />
